--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="{% static "assets/icon/bear.ico" %}" />
     <link rel="stylesheet" href="{% static "assets/css/index.css" %}" />
-    <script src="./index.js"></script>
+    <!--<script src="./index.js"></script>-->
     <title>Meet Food覓食</title>
   </head>
   <body>
