--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -22,7 +22,8 @@
   <body>
     <div class="form-wrapper">
       <h1>Sign In</h1>
-      <form action="/login" method="POST">
+      <form  method="POST" action="{% url "loginsys" %}">
+        {% csrf_token %}
         <div class="form-item">
           <label for="email"></label>
           <input
@@ -42,8 +43,13 @@
           />
         </div>
         <div class="button-panel">
-          <input type="submit" class="button" title="Sign In" value="Sign In" />
+          <a herf ="loginsys/"><input type="submit" class="button" title="Sign In" value="Sign In" /></a>
         </div>
+        {% comment %} <div class="form-item">
+          {%if not request.session.client_name%}
+          <label for="hint">您必須先登陸才能使用發文/帖子功能!</label>
+          {% endif %}
+        </div> {% endcomment %}
       </form>
       <div class="form-footer">
         <p>
