--- a/project/templates/menu1.html
+++ b/project/templates/menu1.html
@@ -31,7 +31,7 @@
       <div class="container-fluid">
         <img class="menu-ico" src="{% static "assets/icon/bear.jpg" %}" alt=""
         />
-        <a class="navbar-brand" href="#">覓食 Meet Food</a>
+        <a class="navbar-brand" href="//">覓食 Meet Food</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="//">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="friend-button" href="../login/"
@@ -69,9 +69,16 @@
                 <li><a class="dropdown-item" href="#">貼文/帖子</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">登出</a>
+                  <a class="dropdown-item" href="{% url "logoutsys" %}">登出</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item">
+              {% if request.session.client_name %}
+              <label class="nav-link active"
+                >嗨!{{ request.session.client_name }}</label
+              >
+              {% endif %}
             </li>
             <!-- <li class="nav-item">
               <a
