--- a/project/templates/menu1.html
+++ b/project/templates/menu1.html
@@ -66,7 +66,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">覓友</a></li>
-                <li><a class="dropdown-item" href="#">貼文/帖子</a></li>
+                <li><a class="dropdown-item" href="{% url "posting" %}">貼文/帖子</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="{% url "logoutsys" %}">登出</a>
