--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -45,12 +45,23 @@
         <div class="button-panel">
           <a herf ="loginsys/"><input type="submit" class="button" title="Sign In" value="Sign In" /></a>
         </div>
-        {% comment %} <div class="form-item">
-          {%if not request.session.client_name%}
-          <label for="hint">您必須先登陸才能使用發文/帖子功能!</label>
-          {% endif %}
-        </div> {% endcomment %}
       </form>
+      
+      <div class="form-wrapper">
+        <div class="form-item">
+            <div class="button-panel">
+              <a href="/menu1/"><input type="button" class="button" title="Home" value="Home"></a>
+              {% if messages %}
+                {% for message in messages %}
+                  <div class="alert alert-{{ message.tags }}text-center">
+                    {{ message }}
+                  </div>
+                {% endfor %}
+              {% endif %}
+            </div>
+        </div>
+      </div>
+      
       <div class="form-footer">
         <p>
           <a href="../createAc/" style="color: palevioletred"
